--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  list-style-type: none;
 }
 
 body {
@@ -22,3 +23,10 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+ul.gallery {
+  display: flex;
+  gap: 20px;
+  list-style-type: none;
+  
+}
+
